<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.healthmate.LoginActivity">


    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/healthmate_round" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/img_profile"
        android:layout_marginTop="46dp"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="57dp"
        app:cardBackgroundColor="@android:color/holo_blue_light"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_btn"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/signip_txt"
        android:textColor="#444"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/log_attempt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login"
        android:layout_below="@+id/password"
        android:layout_centerVertical="true"
        android:layout_marginTop="21dp"
        android:textAlignment="center" />
</RelativeLayout>
